Fixed timetable navigation alignment

--- a/views/classy_cate.less
+++ b/views/classy_cate.less
@@ -100,3 +100,8 @@ td.set, td.due, td.spec, td.given {
 .exercise-navigation-btn i {
   line-height: 20px !important;
 }
+
+.term-navigation {
+  margin-top: 4px;
+  float: right;
+}
